# aitasker-co

./: README.md
claude-code-skills/: README.md
claude-code-skills/glassmorphism-design-system/: SKILL.md  brand-config.example.md
claude-code-skills/image-eval-scoring/: SKILL.md
claude-code-skills/image-eval-scoring/references/: edge-cases.md  output-format.md  rubric-dimensions.md  scoring-examples.md
claude-code-skills/linkedin-recommendation/: SKILL.md  writing-style.md
claude-code-skills/premium-saas-design-system/: SKILL.md  brand-config.example.md
claude-code-skills/rubric-interpreter/: SKILL.md
claude-code-skills/saas-positioning/: SKILL.md
claude-code-skills/saas-positioning/references/: case-studies.md  discovery-questions.md  positioning-canvas.md  sales-narrative-template.md  scoring-rubric.md
claude-code-skills/seo-landing-pages/: SKILL.md
claude-code-skills/seo-landing-pages/references/: cro-patterns.md  json-ld-templates.md  nextjs-seo-architecture.md  seo-checklist.md
claude-code-skills/stop-slop-evaluator/: SKILL.md
claude-code-skills/website-redesign/: SKILL.md
claude-code-skills/website-redesign/references/: anti-patterns.md  experiment-bank.md  reference-palettes.md
mcp-server/: .env.example  LICENSE  README.md  pyproject.toml  server.py
mcp-server/tests/: conftest.py  test_create_task.py  test_remaining_tools.py  test_resources.py  test_task_lifecycle.py
